// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dartboard Address With Tailwind 1`] = `
<div
  className="dartboard"
>
  <div
    className="group"
  >
    <label
      htmlFor="dartboard_street_input"
    >
      Street address
    </label>
    <input
      autoComplete="new-password"
      className="mb-2 block mt-1 bg-white rounded border border-gray-400 text-gray-700 focus:outline-none focus:border-indigo-500 w-full text-base px-3 py-2"
      name="dartboard_street_input"
      onChange={[Function]}
      onKeyUp={[Function]}
    />
  </div>
  <div
    className="group"
  >
    <label
      htmlFor="dartboard_zone_input"
    >
      City or Zip code
    </label>
    <input
      autoComplete="new-password"
      className="mb-2 block mt-1 bg-white rounded border border-gray-400 text-gray-700 focus:outline-none focus:border-indigo-500 w-full text-base px-3 py-2"
      name="dartboard_zone_input"
      onChange={[Function]}
      onKeyUp={[Function]}
    />
  </div>
  <div
    className="group"
  >
    <button
      className="text-black bg-white border border-gray-800 py-1 px-3 focus:outline-none hover:bg-gray-800 hover:text-white transition duration-200 rounded text-lg mt-4"
      onClick={[Function]}
    >
      Find
    </button>
  </div>
</div>
`;

exports[`Storyshots Dartboard Default Address 1`] = `
<div
  className="dartboard"
>
  <div
    className="form-group"
  >
    <label
      htmlFor="dartboard_street_input"
    >
      Street address
    </label>
    <input
      autoComplete="new-password"
      className="form-control"
      name="dartboard_street_input"
      onChange={[Function]}
      onKeyUp={[Function]}
    />
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="dartboard_zone_input"
    >
      City or Zip code
    </label>
    <input
      autoComplete="new-password"
      className="form-control"
      name="dartboard_zone_input"
      onChange={[Function]}
      onKeyUp={[Function]}
    />
  </div>
  <div
    className="form-group"
  >
    <button
      className="btn btn-outline-dark"
      onClick={[Function]}
    >
      Find
    </button>
  </div>
</div>
`;

exports[`Storyshots Dartboard Default Milepost 1`] = `
<div
  className="dartboard"
>
  <div
    className="form-group"
  >
    <label
      htmlFor="dartboard_milepost_input"
    >
      Route
    </label>
    <input
      autoComplete="new-password"
      className="form-control"
      name="dartboard_milepost_input"
      onChange={[Function]}
      onKeyUp={[Function]}
    />
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="dartboard_route_input"
    >
      Milepost
    </label>
    <input
      autoComplete="new-password"
      className="form-control"
      name="dartboard_route_input"
      onChange={[Function]}
      onKeyUp={[Function]}
    />
  </div>
  <div
    className="form-group"
  >
    <button
      className="btn btn-outline-dark"
      onClick={[Function]}
    >
      Find
    </button>
  </div>
</div>
`;

exports[`Storyshots Dartboard Hook With Events 1`] = `
<div
  className="dartboard"
>
  <div
    className="group"
  >
    <label
      htmlFor="dartboard_street_input"
    >
      Street address
    </label>
    <input
      autoComplete="new-password"
      className="mb-2 block mt-1 bg-white rounded border border-gray-400 text-gray-700 focus:outline-none focus:border-indigo-500 w-full text-base px-3 py-2"
      name="dartboard_street_input"
      onChange={[Function]}
      onKeyUp={[Function]}
    />
  </div>
  <div
    className="group"
  >
    <label
      htmlFor="dartboard_zone_input"
    >
      Zip code
    </label>
    <input
      autoComplete="new-password"
      className="mb-2 block mt-1 bg-white rounded border border-gray-400 text-gray-700 focus:outline-none focus:border-indigo-500 w-full text-base px-3 py-2"
      name="dartboard_zone_input"
      onChange={[Function]}
      onKeyUp={[Function]}
    />
  </div>
  <div
    className="group"
  >
    <button
      className="text-black bg-white border border-gray-800 py-1 px-3 focus:outline-none hover:bg-gray-800 hover:text-white transition duration-200 rounded text-lg mt-4"
      onClick={[Function]}
    >
      Find
    </button>
  </div>
</div>
`;

exports[`Storyshots Dartboard Milepost With Arguments 1`] = `
<div
  className="dartboard"
>
  <div
    className="form-group"
  >
    <label
      htmlFor="dartboard_milepost_input"
    >
      Route
    </label>
    <input
      autoComplete="new-password"
      className="form-control"
      name="dartboard_milepost_input"
      onChange={[Function]}
      onKeyUp={[Function]}
    />
  </div>
  <div
    className="form-group"
  >
    <label
      htmlFor="dartboard_route_input"
    >
      Milepost
    </label>
    <input
      autoComplete="new-password"
      className="form-control"
      name="dartboard_route_input"
      onChange={[Function]}
      onKeyUp={[Function]}
    />
  </div>
  <div
    className="form-group"
  >
    <button
      className="btn btn-outline-dark"
      onClick={[Function]}
    >
      Find
    </button>
  </div>
</div>
`;

exports[`Storyshots LayerSelector Basic 1`] = `null`;

exports[`Storyshots LayerSelector Without Expandable Container 1`] = `null`;

exports[`Storyshots LayerSelector/Container Closed 1`] = `
<div
  area-haspopup="true"
  className="layer-selector"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <input
    alt="layers"
    className="layer-selector__toggle"
    src="test-file-stub"
    type="image"
  />
  <form
    className="layer-selector--hidden"
  >
    <div
      style={
        Object {
          "border": "1px solid black",
          "height": "200px",
          "width": "200px",
        }
      }
    >
      peek-a-boo
    </div>
  </form>
</div>
`;

exports[`Storyshots LayerSelector/Container Open 1`] = `
<div
  area-haspopup="true"
  className="layer-selector"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <input
    alt="layers"
    className="layer-selector__toggle layer-selector--hidden"
    src="test-file-stub"
    type="image"
  />
  <form
    className=""
  >
    <div
      style={
        Object {
          "border": "1px solid black",
          "height": "200px",
          "width": "200px",
        }
      }
    >
      peek-a-boo
    </div>
  </form>
</div>
`;

exports[`Storyshots LayerSelector/Item Checked Base Layer 1`] = `
<div
  className="layer-selector-item radio checkbox"
>
  <label
    className="layer-selector--item"
  >
    <input
      checked={true}
      className="layer-selector-item-input"
      name="baselayer"
      onChange={[Function]}
      type="radio"
      value="Base Layer"
    />
    Base Layer
  </label>
</div>
`;

exports[`Storyshots LayerSelector/Item Checked Overlay 1`] = `
<div
  className="layer-selector-item radio checkbox"
>
  <label
    className="layer-selector--item"
  >
    <input
      checked={true}
      className="layer-selector-item-input"
      name="overlay"
      onChange={[Function]}
      type="checkbox"
      value="Overlay Layer"
    />
    Overlay Layer
  </label>
</div>
`;

exports[`Storyshots LayerSelector/Item Default Base Layer 1`] = `
<div
  className="layer-selector-item radio checkbox"
>
  <label
    className="layer-selector--item"
  >
    <input
      checked={false}
      className="layer-selector-item-input"
      name="baselayer"
      onChange={[Function]}
      type="radio"
      value="Base Layer"
    />
    Base Layer
  </label>
</div>
`;

exports[`Storyshots LayerSelector/Item Default Overlay 1`] = `
<div
  className="layer-selector-item radio checkbox"
>
  <label
    className="layer-selector--item"
  >
    <input
      checked={false}
      className="layer-selector-item-input"
      name="overlay"
      onChange={[Function]}
      type="checkbox"
      value="Overlay Layer"
    />
    Overlay Layer
  </label>
</div>
`;

exports[`Storyshots LayerSelector/WithMap Custom LOD 1`] = `null`;

exports[`Storyshots LayerSelector/WithMap Land Ownership 1`] = `null`;

exports[`Storyshots LayerSelector/WithMap Linked Overlays 1`] = `null`;

exports[`Storyshots LayerSelector/WithMap No Zoom Or Scale 1`] = `null`;

exports[`Storyshots LayerSelector/WithMap Scale 1`] = `null`;

exports[`Storyshots LayerSelector/WithMap Zoom 1`] = `null`;

exports[`Storyshots LayerSelector/WithMap Zoom And Scale 1`] = `null`;

exports[`Storyshots Sherlock Locator Suggestion 1`] = `null`;

exports[`Storyshots Sherlock/InMap Address Points 1`] = `null`;

exports[`Storyshots Sherlock/InMap Cities 1`] = `null`;
